--- a/jobs/constant_long_runs_2_nodes.yaml
+++ b/jobs/constant_long_runs_2_nodes.yaml
@@ -1,20 +1,22 @@
 job_details:
-  name: kaplan_long_runs_2_nodes
+  name: const_long_runs_2_nodes
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 2
 parameters:
-    model: [
-      'layers=8_hidden-dim=288',
-      'layers=9_hidden-dim=320',
-      'layers=10_hidden-dim=384',
-      'layers=12_hidden-dim=480',
-      'layers=14_hidden-dim=576',
-      'layers=15_hidden-dim=640'
-    ]
-    train_num_samples: [130000000] 
-    # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
-    # but we will never reach that - we will stop after 6 or 12 hours.
+    LIST_MODEL_TOKENS:
+      - model: ['layers=8_hidden-dim=288']
+        train_num_samples: [78704640] # ~79M - x100 epochs = 7.9B tokens
+      - model: ['layers=9_hidden-dim=320']
+        train_num_samples: [100352000] # ~100M
+      - model: ['layers=10_hidden-dim=384']
+        train_num_samples: [129712128] # ~130M
+      - model: ['layers=12_hidden-dim=480']
+        train_num_samples: [200847360] # ~200M
+      - model: ['layers=14_hidden-dim=576']
+        train_num_samples: [296755200] # ~296M
+      - model: ['layers=15_hidden-dim=640']
+        train_num_samples: [379617280] # ~379M
     warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -32,9 +34,11 @@ parameters:
     lr_cooldown_end: [3.0e-05] # in the rpj config it was like that, so I keep it
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['const']
+    averagers: ['poly_16_1'] # add more averagers?
+    log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
     wd: [0.033]
-    lr: [1.5e-03]
+    lr: [1.5e-03] 
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
