--- a/jobs/constant_long_runs_4_nodes.yaml
+++ b/jobs/constant_long_runs_4_nodes.yaml
@@ -1,24 +1,26 @@
 job_details:
-  name: kaplan_long_runs_2_nodes
+  name: const_long_runs_4_nodes
   output_dir: exps_final_runs
   num_gpus: 4
-  num_nodes: 2
+  num_nodes: 4
 parameters:
-    model: [
-      'layers=8_hidden-dim=288',
-      'layers=9_hidden-dim=320',
-      'layers=10_hidden-dim=384',
-      'layers=12_hidden-dim=480',
-      'layers=14_hidden-dim=576',
-      'layers=15_hidden-dim=640'
-    ]
-    train_num_samples: [130000000] 
-    # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
-    # but we will never reach that - we will stop after 6 or 12 hours.
+    LIST_MODEL_TOKENS:
+      - model: ['layers=18_hidden-dim=704']
+        train_num_samples: [521658368] # ~522M - x100 epochs = 52.2B tokens (highest token count)
+      - model: ['layers=21_hidden-dim=832']
+        train_num_samples: [377291226] # ~377M - x100 epochs = 37.7B tokens it takes to reach 5e+19 flops
+      - model: ['layers=23_hidden-dim=1024']
+        train_num_samples: [240099274] # ~240M - x100 epochs = 24B tokens it takes to reach 5e+19 flops
+      - model: ['layers=26_hidden-dim=1120']
+        train_num_samples: [183024937] # ~183M - x100 epochs = 18.3B tokens it takes to reach 5e+19 flops 
+      - model: ['layers=26_hidden-dim=1312']
+        train_num_samples: [136174748] # ~136M - x100 epochs = 13.6B tokens it takes to reach 5e+19 flops
+      - model: ['layers=30_hidden-dim=1504']
+        train_num_samples: [92415339] # ~3.2B
     warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [8] # global batch size is 8*2*4 = 64
+    batch_size: [4] # global batch size is 4*4*4 = 64
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
@@ -32,9 +34,11 @@ parameters:
     lr_cooldown_end: [3.0e-05] # in the rpj config it was like that, so I keep it
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['const']
+    averagers: ['poly_16_1'] # add more averagers?
+    log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
     wd: [0.033]
-    lr: [1.5e-03]
+    lr: [1.5e-03] 
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
