--- a/jobs/kaplan_long_runs_4_nodes.yaml
+++ b/jobs/kaplan_long_runs_4_nodes.yaml
@@ -1,26 +1,27 @@
 job_details:
-  name: kaplan_long_runs_2_nodes
+  name: kaplan_long_runs_4_nodes
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
-        train_num_samples: [521658368] # ~522M - x100 epochs = 52.2B tokens (highest token count)
+        max_tokens: [559114325] # in all models, the max tokens is num of tokens to reach 5e+19 flops. here we don't stop after 6/12 hours
       - model: ['layers=21_hidden-dim=832']
-        train_num_samples: [377291226] # ~377M, token count is going down as we reach 5e19 flops 
+        max_tokens: [377291226]
       - model: ['layers=23_hidden-dim=1024']
-        train_num_samples: [240099274] # ~240M
+        max_tokens: [240099274]
       - model: ['layers=26_hidden-dim=1120']
-        train_num_samples: [183024937] # ~183M
+        max_tokens: [183024937]
       - model: ['layers=26_hidden-dim=1312']
-        train_num_samples: [136174748] # ~136M
+        max_tokens: [136174748]
       - model: ['layers=30_hidden-dim=1504']
-        train_num_samples: [92415339] # ~92M
+        max_tokens: [92415339]
+    train_num_samples: [1300000000] # ~1.3B - x100 epochs = 130B tokens (as in kaplan)
     warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [4] # global batch size is 8*2*4 = 64
+    batch_size: [4] # global batch size is 4*4*4 = 64
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
@@ -36,7 +37,7 @@ parameters:
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['cosine']
     wd: [0.033]
-    lr: [2.12e-03] # BS sqrt scaling of constant LR - or should we use the same LR as Kaplan?
+    lr: [1.5e-03] # same as constant lr in the rpj config
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
